--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,3 +10,5 @@ jobs:
         uses: reviewdog/action-golangci-lint@v2
         with:
           golangci_lint_flags: '--enable-all --disable wrapcheck,goerr113,gochecknoglobals,exhaustivestruct,gochecknoinits,interfacer,prealloc'
+          fail_on_error: true
+          go_version: 1.15
