--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,14 +1,18 @@
 name: Lint
 on: [pull_request]
+permissions:
+  contents: read
 jobs:
   golangci-lint:
+    name: lint
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: reviewdog/action-golangci-lint@v2
+      - uses: actions/setup-go@v3
         with:
-          golangci_lint_flags: '--enable-all --disable wrapcheck,goerr113,gochecknoglobals,exhaustivestruct,gochecknoinits,interfacer,prealloc,gci,cyclop'
-          fail_on_error: true
-          go_version: 1.17
+          go-version: 1.17
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
