--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,11 +6,12 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.17.x, 1.18.x]
+        go-version: [1.17.x, 1.18.x, 1.19.x, 1.20.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
     name: Test
     runs-on: ${{ matrix.os }}
     steps:
+    - uses: actions/setup-go@v3
     - uses: actions/setup-go@v3
       with:
         go-version: ${{ matrix.go-version }}
