--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,10 +9,11 @@ jobs:
     steps:
       - uses: actions/setup-go@v3
         with:
-          go-version: 1.20
+          go-version: '>=1.19.0'
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: 1.51.1
+          only-new-issues: true
