--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,5 +15,5 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: 1.51.1
+          version: v1.51.1
           only-new-issues: true
