--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -3,17 +3,16 @@ on: [pull_request]
 permissions:
   contents: read
 jobs:
-  golangci-lint:
+  golangci:
     name: lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version: '>=1.21.0'
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
+          cache: false
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v4
         with:
-          version: v1.51.1
-          only-new-issues: true
+          version: v1.57.2
