--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -2,6 +2,8 @@ name: Lint
 on: [pull_request]
 permissions:
   contents: read
+  pull-requests: read
+  checks: write
 jobs:
   golangci:
     name: lint
@@ -11,8 +13,7 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '>=1.23.0'
-          cache: false
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v4
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.57.2
+          version: v1.60
